updated projects source

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -14,7 +14,7 @@
     "description": "This is a project made to learn the latest languages by building an app.",
     "skills": ["Html", "CSS", "Javascript"],
     "demo": "https://madhu-suthanan-r.github.io/static-swipe-ui/",
-    "source": "https://www.github.com"
+    "source": "https://github.com/madhu-suthanan-r/static-swipe-ui"
   },
   {
     "title": "Project C",
