--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -19,6 +19,7 @@
   {
     "title": "EMI Calculator",
     "imageSrc": "https://app.netlify.com/.netlify/images?url=https://d33wubrfki0l68.cloudfront.net/6768746162c055fbd1c6cdba/screenshot_2024-12-22-20-20-29-0000.webp",
+    "imageFromHost": true,
     "description": "This is a project made to learn the latest languages by building an app.",
     "skills": ["HTML", "CSS", "Javascript", "React"],
     "demo": "https://m-emi-calculator.netlify.app",
